# to update the local installation of the module run  pip install -e .
# then all the relative imports should work as budgetbook.module or ..module
[build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "budgetbook"
version = "0.3.0"
dependencies = [
    "pylint>=3.3.0",
    "pylint-exit>=1.2.0",
    "PyQt6>=6.9.0",
    "PyQt6-Charts>=6.9.0",
    "pandas>=2.2.0",
    "numpy>=1.26.4",
    "python-dateutil>=2.8.2",
    "pymupdf>=1.25.5",
    "matplotlib>=3.8.2",
    "requests>=2.32.4",
]
authors = [{ name = "Greg" }]
maintainers = [{ name = "Greg" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
description = "Budget and Expenses tracker"
keywords = [
    "budget",
    "expense",
    "money",
    "financial",
    "tracking",
] #this needs work, check pypi for ideas

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Documentation = "https://github.com/Gergzilla/budgetbook"
Repository = "https://github.com/Gergzilla/budgetbook"
Issues = "https://github.com/Gergzilla/budgetbook/issues"
[project.gui-scripts]
budget-book-gui = "main:main"

[tool.hatch.build]
# this tells hatch to look for your code in the src folder
sources = ["src"]
